<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="#001064"
            android:gravity="center"
            android:text="@string/encuestaTitle"
            android:textColor="@android:color/background_light"
            android:textSize="27sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="96dp"
            android:text="@string/edad"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_below="@+id/textView3"
            android:layout_alignParentStart="true"
            android:layout_marginTop="13dp" />

        <Spinner
            android:id="@+id/edadSpinner"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/textView2"
            android:layout_toEndOf="@+id/textView2"
            android:layout_marginStart="28dp"
            android:backgroundTint="@android:color/background_light"
            android:popupBackground="?attr/colorPrimary"
            />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edadSpinner"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/question1"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true" />

        <Spinner
            android:id="@+id/ocupacionSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView16"
            android:layout_below="@+id/textView16"
            android:layout_marginTop="20dp"
            android:layout_alignEnd="@+id/textView16"
            android:backgroundTint="@android:color/background_light"
            android:popupBackground="?attr/colorPrimary"/>

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/ocupacionSpinner"
            android:layout_below="@+id/ocupacionSpinner"
            android:layout_marginTop="20dp"
            android:text="@string/question2"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_alignEnd="@+id/ocupacionSpinner" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/textView17"
            android:layout_alignStart="@+id/textView17"
            android:layout_below="@+id/textView17"
            android:layout_marginTop="20dp"
            android:backgroundTint="@android:color/background_light"
            android:ems="10"
            android:hint="@string/mailExample"
            android:inputType="textPersonName"
            android:textColorHint="@android:color/background_light" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/question3"
            android:layout_below="@+id/editText2"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_alignStart="@+id/editText2"
            android:layout_alignEnd="@+id/editText2" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_alignEnd="@+id/textView18"
            android:layout_alignStart="@+id/textView18"
            android:layout_below="@+id/textView18"
            android:layout_marginTop="20dp"
            android:backgroundTint="@android:color/background_light"
            android:ems="5"
            android:inputType="textMultiLine" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_below="@+id/editText"
            android:layout_marginTop="20dp"
            android:src="@drawable/submit"
            android:layout_alignParentBottom="true"
            android:background="?attr/colorPrimary"
            android:layout_centerHorizontal="true" />


    </RelativeLayout>

</ScrollView>