<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    tools:context="com.coffesoftware.recoverapp.ConfigActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView5"
            android:background="#001064"
            android:paddingLeft="10dp"
            android:text="@string/teclas"
            android:textColor="@android:color/background_light"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView6"
            android:background="#001064"
            android:paddingLeft="10dp"
            android:text="@string/cuentaDrive"
            android:textColor="@android:color/background_light"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView9"
            android:background="#001064"
            android:paddingLeft="10dp"
            android:text="@string/passwd"
            android:textColor="@android:color/background_light"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView14"
            android:background="#001064"
            android:paddingLeft="10dp"
            android:text="@string/passwd"
            android:textColor="@android:color/background_light"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="#001064"
            android:gravity="center"
            android:paddingEnd="10dp"
            android:text="CONFIGURACIÓN"
            android:textColor="@android:color/background_light"
            android:textSize="27sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView3"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"
            android:text="Teclas de Bloqueo"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView7"
            android:paddingLeft="10dp"
            android:text="Cuenta de Drive"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView8"
            android:paddingLeft="10dp"
            android:text="Contraseña"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/textView5"
            android:layout_marginEnd="24dp"
            android:onClick="filesActivity"
            app:srcCompat="@drawable/block" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignStart="@+id/imageView2"
            android:layout_below="@+id/textView7"
            android:onClick="contactsActivity"
            app:srcCompat="@drawable/drive" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignStart="@+id/imageView3"
            android:layout_below="@+id/textView8"
            android:onClick="cloudActivity"
            app:srcCompat="@drawable/passwd" />

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            app:srcCompat="@drawable/set"
            android:layout_alignBottom="@+id/textView15"
            android:layout_alignParentStart="true" />

    </RelativeLayout>


</ScrollView>
